syntax = "proto3";

import "api/google/api/annotations.proto";

option go_package="gitlab.ozon.dev/zBlur/homework_2/api";

package api;

message Empty {
}

// -------------- User -----------------

message CreateUserRequest {
  int64 Id = 1;
  string UserName = 2;
  string FirstName = 3;
  string LastName = 4;
}

message RetrieveUserRequest {
  int64 Id = 1;
}

message UpdateUserRequest {
  int64 Id = 1;
  string UserName = 2;
  string FirstName = 3;
  string LastName = 4;
}

message DeleteUserRequest {
  int64 Id = 1;
}

message User {
  int64 Id = 1;
  string UserName = 2;
  string FirstName = 3;
  string LastName = 4;
}

// -------------- Portfolio -----------------

message Portfolio {
  int64 Id = 1;
  int64 UserId = 2;
  string BaseCurrencyCode = 3;
  repeated PortfolioItem Items = 4;
}

message PortfolioItem {
  int64 Id = 1;
  int64 PortfolioId = 2;
  int64 MarketItemId = 3;
  double Price = 4;
  double Volume = 5;
}

message CreatePortfolioRequest {
  int64 UserId = 1;
}

// -------------- Market -----------------




service UserPortfolioService {
  rpc CreateUser(CreateUserRequest) returns (Empty) {
    option (google.api.http) = {
      post: "/v1/users"
      body: "*"
    };
  }
  rpc RetrieveUser(RetrieveUserRequest) returns (User) {
    option (google.api.http) = {
      get: "/v1/users/{Id}"
    };
  }
  rpc RetrieveOrCreateUser(CreateUserRequest) returns (User) {
    option (google.api.http) = {
      post: "/v1/users/{Id}"
      body: "*"
    };
  }
  rpc UpdateUser(UpdateUserRequest) returns (Empty) {
    option (google.api.http) = {
      put: "/v1/users/{Id}"
      body: "*"
    };
  }
  rpc DeleteUser(DeleteUserRequest) returns (Empty) {
    option (google.api.http) = {
      delete: "/v1/users/{Id}"
    };
  }
  rpc RetrieveOrCreatePortfolio(CreatePortfolioRequest) returns (Portfolio) {
    option (google.api.http) = {
      post: "/v1/portfolio/{UserId}"
      body: "*"
    };
  }
}
